added refresh token, added add translations form, added some openApi doc. TODO: c/c finished display of ShowMovie to IndexMovie in front + remove poster column in DB + finish doc response schema exemple + build and deploy v1
