# routes/api.php
@@ -1,7 +1,5 @@
 <?php
 
-use App\Models\Movie;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,10 +12,13 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-Route::get('/user', ['App\Http\Controllers\UserController', 'getUser'])->middleware('auth:sanctum');
-Route::apiResource('movies', \App\Http\Controllers\MovieController::class)->only(['index', 'show']);
-Route::apiResource('movies', \App\Http\Controllers\MovieController::class)->except(['index', 'show'])->middleware('auth:sanctum');
+Route::get('/user', ['App\Http\Controllers\UserController', 'getUser'])
+     ->middleware('auth:sanctum');
+Route::apiResource('movies', \App\Http\Controllers\MovieController::class)
+     ->only(['index', 'show']);
+Route::apiResource('movies', \App\Http\Controllers\MovieController::class)
+     ->except(['index', 'show'])
+     ->middleware('auth:sanctum');
 
-Route::post('/tokens/create', function (Request $request) {
-    return $request->user()->createToken("client_token")->plainTextToken;
-});
+Route::post('/tokens/create', ['App\Http\Controllers\TokenController', 'create'])
+     ->middleware('auth:sanctum');
